--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -54,12 +54,14 @@ height: 35px;
     top: 50%;
     left:50%;
     transform: translate(-50%,-50%);
+    text-align: center;
 }
 
 .heading-primary{
     color:#fff;
     text-transform: uppercase;
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 
 .heading-primary-main{
@@ -117,22 +119,24 @@ height: 35px;
     }
 }
 
-
-    @keyframes spinner {
-        0% {
-            transform: rotate(0deg);
-        }
-        
-
-        50%{
-            transform: rotate(720deg) ;
-
-        } 
-        
-        100% {
-            transform: rotate(720deg);
-    
-        }
-    }
-
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+}
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);    
+}
+.btn-white {
+    background-color: #fff;
+    color: #777;
 }
