--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -7,199 +7,194 @@ Dark green: #28b485
 
 */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;  
+    /* */ 
 }
 
 body {
-    font-family: "Lato" , sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: #777;
-    padding:30px;
+  font-family: "Lato", sans-serif; 
+  font-weight: 400;
+  /*     font-size: 16px; */
+  line-height: 1.7;
+  color: #777;
+  padding: 1rem;
+  box-sizing: border-box;
 }
- 
+
 .header {
-    height: 95vh; 
-    background-image: linear-gradient(
-        to right bottom,#7ed56fb4
-        ,#28b4859d),
-        url(../img/hero.jpg);
-    background-size: cover; 
-    background-position: top;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, #7ed56fb4, #28b4859d),
+    url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
 
-    clip-path: polygon(0 0 , 100% 0 , 100% 75vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box{
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    backface-visibility: hidden;
-    animation: spinner 5s;
-    animation-fill-mode:backwards;
+.logo-box {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  backface-visibility: hidden;
+  animation: spinner 5s;
+  animation-fill-mode: backwards;
 }
 
-.logo{
-height: 35px;
+.logo {
+  height: 2.5rem;
 }
 
-.logo:hover{
-  
+.logo:hover {
 }
 
-.text-box{
-    position: absolute;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
+.text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-.heading-primary{
-    color:#fff;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 60px;
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
 }
 
-.heading-primary-main{
-    display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 35px;
+.heading-primary-main {
+  display: block;
+  font-size: 4rem;
+  font-weight: 400;
+  letter-spacing: 2.5rem;
 
-    animation-name: moveInLeft;
-    animation-duration: 2s; 
-    animation-timing-function: ease-out;
+  animation-name: moveInLeft;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
 }
 
-.heading-primary-sub{
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 17.4px;
-    animation: moveInRight 2s ease-out;
+.heading-primary-sub {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 1rem;
+  animation: moveInRight 2s ease-out;
 }
-
 
 @keyframes spinner {
-    0% {
-        opacity: 1;
-        transform: translateX(100px) translateY(100px) rotate(720deg);
-    }
+  0% {
+    opacity: 1;
+    transform: translateX(10rem) translateY(10rem) rotate(720deg);
+  }
 
-
-    100% {
-        opacity: 1;
-        transform:  translate(0);
-
-    }
-
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
-
 
 @keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: rotate(-100px) rotate(90deg);
-    }
+  0% {
+    opacity: 0;
+    transform: rotate(-10rem) rotate(90deg);
+  }
 
-    80% {
-        transform: translateX(10px);
-    }
+  80% {
+    transform: translateX(1rem);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-
-    }
-
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
-
 
 @keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(1000px);
-    }
+  0% {
+    opacity: 0;
+    transform: translateX(100rem);
+  }
 
-    80% {
-        transform: translateX(-10px);
-    }
+  80% {
+    transform: translateX(-1rem);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-
-    }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 @keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(1000px);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(100rem);
+  }
 
-    80% {
-        transform: translateY(-10px);
-    }
+  80% {
+    transform: translateY(-1rem);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-
-    }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .btn:link,
 .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
-    position: relative;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
 }
 .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+  transform: translateY(-.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);    
+  transform: translateY(-.1rem);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
 }
 .btn-white {
-    background-color: #fff;
-    color: #777;
+  background-color: #fff;
+  color: #777;
 }
 
-.btn::after{
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top:0;
-    left:0;
-    z-index: -1;
-    transition: all .4s;
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
 }
 
 .btn-white::after {
-    background-color: #fff;
+  background-color: #fff;
 }
 
-.btn:hover::after{
-    transform: scaleX(1.5) scaleY(1.6);
-    opacity: 0;
+.btn:hover::after {
+  transform: scaleX(1.5) scaleY(1.6);
+  opacity: 0;
 }
 
-.btn-animated{
-    animation: moveInBottom 2s ease-in .75s;
-    animation-fill-mode:backwards;
+.btn-animated {
+  animation: moveInBottom 2s ease-in 0.75s;
+  animation-fill-mode: backwards;
 }
