--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -40,7 +40,7 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 3rem;
   left: 3rem;
@@ -56,7 +56,7 @@ body {
 .logo:hover {
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -71,7 +71,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 4rem;
   font-weight: 400;
@@ -82,7 +82,7 @@ body {
   animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -167,7 +167,7 @@ body {
   transform: translateY(-.1rem);
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
 }
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -185,7 +185,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -194,7 +194,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 2s ease-in 0.75s;
   animation-fill-mode: backwards;
 }
