--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -178,6 +178,33 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: scaleY(0px); }
 
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s;
+    outline-offset: 2rem; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 3rem; }
+    .composition__photo--p3 {
+      right: 25%;
+      top: 15rem; }
+    .composition__photo:hover {
+      outline: 15px solid #55c57a;
+      transform: scale(1.05) translateY(-1rem) rotateX(10);
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.8); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, #7ed56fb4, #28b4859d), url(../img/hero.jpg);
