--- a/Natours/starter/sass/components/_feature-box.scss
+++ b/Natours/starter/sass/components/_feature-box.scss
@@ -4,9 +4,9 @@
     padding:2.5rem;
     text-align: center;
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: all .4s;
-    
+    @include box-shadow-s;
+
     &:hover {
         transform: translateY(-1.5rem) scale(1.03 );
     }
