--- a/Natours/starter/sass/components/_buttons.scss
+++ b/Natours/starter/sass/components/_buttons.scss
@@ -18,9 +18,22 @@
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     }
     &--white {
-      background-color: #fff;
+      background-color:$color-white;
       color: $color-grey-dark;
+
+      &::after {
+        background-color: $color-white;
+      }
     }
+    &--green {
+      background-color: $color-primary;
+      color: $color-white;
+
+      &::after {
+        background-color: $color-primary;
+      }
+    }
+    
     
     &::after {
       content: "";
@@ -35,9 +48,7 @@
       transition: all 0.4s;
     }
     
-    &--white::after {
-      background-color: #fff;
-    }
+    
     
     &:hover::after {
       transform: scaleX(1.5) scaleY(1.6);
