--- a/Natours/starter/sass/components/_buttons.scss
+++ b/Natours/starter/sass/components/_buttons.scss
@@ -1,4 +1,5 @@
 .btn{
+  &,
     &:link,
     &:visited {
       text-transform: uppercase;
@@ -8,12 +9,18 @@
       border-radius: 10rem;
       transition: all 0.2s;
       position: relative;
+      font-size: $default-font-size;
+
+    //Change for the button element
+    border: none;
+    cursor: pointer;
     }
     &:hover {
       transform: translateY(-0.3rem);
       box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
     }
-    &:active {
+    &:active, &:focus {
+      outline: none;
       transform: translateY(-0.1rem);
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     }
