--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -9,3 +9,10 @@
   @mixin box-shadow-s {
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
   }
+
+  @mixin absCenter {
+      position: absolute;
+      top:50%;
+      left:50%;
+      transform: translate(-50%, -50%);
+  }
