--- a/Natours/starter/sass/components/_popup.scss
+++ b/Natours/starter/sass/components/_popup.scss
@@ -8,6 +8,10 @@
 
     z-index: 9999;
 
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+
     &__content {
         @include absCenter;
         background-color: white;
@@ -16,6 +20,10 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.5);
+
+        transition: all .2s .3s;
     }
 
     &__left {
@@ -44,6 +52,35 @@
         column-rule: 1px solid $color-grey-light-2;
 
         hyphens: auto;
+    }
+
+    &:target{
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all .2s;
+            line-height: 1;
+        }
+
+        &:hover {
+            color:$color-primary;
+        }
     }
 
 }
