--- a/Natours/starter/sass/components/_popup.scss
+++ b/Natours/starter/sass/components/_popup.scss
@@ -1,45 +1,43 @@
 .popup {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba($color-black,.8);
-
+    background-color: rgba($color-black, .8);
     z-index: 9999;
-
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
 
     &__content {
         @include absCenter;
-        background-color: white;
+
         width: 75%;
+        background-color: $color-white;
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
         border-radius: 3px;
         display: table;
         overflow: hidden;
         opacity: 0;
-        transform: translate(-50%, -50%) scale(.5);
-
-        transition: all .2s .3s;
+        transform: translate(-50%, -50%) scale(.25);
+        transition: all .5s .2s;
     }
 
     &__left {
         width: 33.333333%;
         display: table-cell;
     }
-    
+
     &__right {
-        width: 66.666667%;
+        width: 66.6666667%;
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
     }
 
     &__img {
-        display:block;
+        display: block;
         width: 100%;
     }
 
@@ -47,14 +45,22 @@
         font-size: 1.4rem;
         margin-bottom: 4rem;
 
-        column-count: 3;
-        column-gap: 4rem; //1em = 14px 
+        -moz-column-count: 2;
+        -moz-column-gap: 4rem; //1em = 14px;
+        -moz-column-rule: 1px solid $color-grey-light-2;
+
+        column-count: 2;
+        column-gap: 4rem; //1em = 14px;
         column-rule: 1px solid $color-grey-light-2;
 
+        -moz-hyphens: auto;
+        -ms-hyphens: auto;
+        -webkit-hyphens: auto;
         hyphens: auto;
     }
 
-    &:target{
+    //Open states
+    &:target {
         opacity: 1;
         visibility: visible;
     }
@@ -79,8 +85,7 @@
         }
 
         &:hover {
-            color:$color-primary;
+            color: $color-primary;
         }
     }
-
 }
