--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
-    background-color:$color-grey-dark-3;
+    background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+    color: $color-grey-light-1;
 
     &__logo-box {
         text-align: center;
@@ -14,9 +15,9 @@
     }
 
     &__navigation {
-        display: inline-block;
-        border-top: 1px solid $color-grey-light-2;
+        border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
+        display: inline-block;
     }
 
     &__list {
@@ -25,6 +26,7 @@
 
     &__item {
         display: inline-block;
+
         &:not(:last-child) {
             margin-right: 1.5rem;
         }
@@ -45,16 +47,14 @@
         &:active {
             color: $color-primary;
             box-shadow: 0 1rem 2rem rgba($color-black, .4);
-            transform: rotate(15deg) scale(1.3);
-            background-color:$color-grey-dark-3;
-            ;
+            transform: rotate(5deg) scale(1.3);
         }
     }
 
     &__copyright {
-        float: right;
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
-        width:80%;
+        width: 80%;
+        float: right;
     }
 }
