--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -1,38 +1,35 @@
 .section-about {
-  background-color: $color-grey-light-1;
-  padding: 25rem 0;
-  margin-top: -20vh;
+    background-color: $color-grey-light-1;
+    padding: 25rem 0;
+    margin-top: -20vh;
 }
 
 .section-features {
-  padding: 20rem 0;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    ),
+    padding: 20rem 0;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)),
     url(../img/nat-4.jpg);
-  background-size: cover;
-  transform: skewY(-7deg);
-  margin-top: -11rem;
+    background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -10rem;
 
+    & > * {
+        transform: skewY(7deg);
+    }
 
-  & > *  //* is a wild card
- {
-    transform: skewY(7deg);
-  }
 }
 
-.section-tours{
+.section-tours {
     background-color: $color-grey-light-1;
-    padding: 25rem 0;
-    margin-top: -11rem;
-
+    padding: 25rem 0 15rem 0;
+    margin-top: -10rem;
 }
 
 .section-stories {
-    padding: 15rem 0;
     position: relative;
+    padding: 15rem 0;
 }
 
 .section-book {
@@ -41,10 +38,15 @@
 }
 
 .book {
-    background-image: linear-gradient(135deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%), url(../../img/nat-10.jpg);
+    background-image: linear-gradient(105deg, 
+                                    rgba($color-white, .9) 0%,
+                                    rgba($color-white, .9) 50%,
+                                    transparent 50%) ,
+                            url(../img/nat-10.jpg);
     background-size: 100%;
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color-black,.35);
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
     height: 50rem;
 
     &__form {
@@ -52,5 +54,3 @@
         padding: 6rem;
     }
 }
-
-
